--- a/rendu/presentation.tex
+++ b/rendu/presentation.tex
@@ -234,6 +234,7 @@ xleftmargin=2em,frame=single,framexleftmargin=1.5em
             \item Application des changements des autres Clients
         \end{itemize}
     \end{block}
+\end{frame}
 
 \begin{frame}
     \frametitle{Gestion de projet}
