Quelques modif Toto + ratio

--- a/rendu/presentation.tex
+++ b/rendu/presentation.tex
@@ -306,8 +306,13 @@ xleftmargin=2em,frame=single,framexleftmargin=1.5em
             \item Projet séparés en tâches : plugins IDE, serveur \& client, gestion de conflits, protocoles de communication, ...
             \item 1 sprint par jour avec état d'avancement chaque matin
             \item Document de suivi décrivant les objectifs du jour
+            \item Objectif d'avoir toujours une version fonctionnelle : d'abord envoyer un simple char, puis plusieurs, puis gérer les conflits, ...
         \end{itemize}
     \end{block}
+    \pause
+    \begin{exampleblock}{Exemple}
+        Cette stratégie nous a permis d'écarter la piste de Kyte au profit d'EasySync assez rapidement
+    \end{exampleblock}
 \end{frame}
 
 \begin{frame}
@@ -329,8 +334,8 @@ xleftmargin=2em,frame=single,framexleftmargin=1.5em
             \item Visualisation des curseurs
         \end{itemize}
     \end{block}
-    \begin{exampleblock}{Exemple}
-        Cette présentation a été codée à plusieurs en même temps grâce à Smart Share !
+    \begin{exampleblock}{Belle récompense}
+        Cette présentation a été codée à plusieurs, simultanément, en utilisant Smart Share !
     \end{exampleblock}
 \end{frame}
 
