--- a/rendu/presentation.tex
+++ b/rendu/presentation.tex
@@ -61,6 +61,7 @@ xleftmargin=2em,frame=single,framexleftmargin=1.5em
 \end{frame}
 
 \begin{frame}
+    \frametitle{Objectifs}
     \begin{block}{Temps réel}
         \begin{itemize}
             \item Latence faible
@@ -334,6 +335,7 @@ xleftmargin=2em,frame=single,framexleftmargin=1.5em
             \item Visualisation des curseurs
         \end{itemize}
     \end{block}
+    \pause
     \begin{exampleblock}{Belle récompense}
         Cette présentation a été codée à plusieurs, simultanément, en utilisant Smart Share !
     \end{exampleblock}
