--- a/rendu/presentation.tex
+++ b/rendu/presentation.tex
@@ -35,12 +35,6 @@ xleftmargin=2em,frame=single,framexleftmargin=1.5em
 
 \frame{\titlepage}
 
-\section{Première itération}
-\begin{frame}
-    \frametitle{Architecture globale}
-    \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{archi.png}
-\end{frame}
-
 \begin{frame}
     \frametitle{Objectifs}
     \begin{block}{Existant}
@@ -49,6 +43,8 @@ xleftmargin=2em,frame=single,framexleftmargin=1.5em
             \item LiveShare: restreint à VSCode
             \item CodeTogether: payant, propriétaire
         \end{itemize}
+        Ces solutions sont restrictives ou demandent à utiliser une nouvel outil d'édition ou sont payantes.
+        On doit pouvoir améliorer cela !
     \end{block}
     \begin{block}{Notre proposition}
         Une solution open-source d'édition de fichiers simultanée fonctionnant sur plusieurs éditeurs.
@@ -75,6 +71,12 @@ xleftmargin=2em,frame=single,framexleftmargin=1.5em
             \item Facilité d'intégration
         \end{itemize}
     \end{block}
+\end{frame}
+
+\section{Première itération}
+\begin{frame}
+    \frametitle{Architecture globale}
+    \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{archi.png}
 \end{frame}
 
 \begin{frame}
