--- a/rendu/presentation.tex
+++ b/rendu/presentation.tex
@@ -252,6 +252,26 @@ xleftmargin=2em,frame=single,framexleftmargin=1.5em
 \end{frame}
 
 \begin{frame}
+    \frametitle{Protocole 1/4 - Initialisation}
+    \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{1.svg}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Protocole 2/4 - Modification}
+    \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{2.svg}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Protocole 3/4 - Conflit client-serveur}
+    \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{3.svg}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Protocole 4/4 - Conflit IDE-client}
+    \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{4.svg}
+\end{frame}
+
+\begin{frame}
     \frametitle{Plugins IDE}
     \framesubtitle{Neovim}
     \begin{block}{Configuration}
