--- a/rendu/presentation.tex
+++ b/rendu/presentation.tex
@@ -12,6 +12,7 @@
 \usepackage{listings}
 \usepackage{tikz}
 \usepackage{xcolor}
+\usepackage{svg}
 \usetikzlibrary{positioning}
 \usetikzlibrary{shapes.geometric}
 
