--- a/rendu/presentation.tex
+++ b/rendu/presentation.tex
@@ -12,7 +12,6 @@
 \usepackage{listings}
 \usepackage{tikz}
 \usepackage{xcolor}
-\usepackage{svg}
 \usetikzlibrary{positioning}
 \usetikzlibrary{shapes.geometric}
 
@@ -255,22 +254,30 @@ xleftmargin=2em,frame=single,framexleftmargin=1.5em
 
 \begin{frame}
     \frametitle{Protocole 1/4 - Initialisation}
-    \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{diagrams/1.png}
+    \begin{figure}
+        \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{diagrams/1.png}
+    \end{figure}
 \end{frame}
 
 \begin{frame}
     \frametitle{Protocole 2/4 - Modification}
-    \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{diagrams/2.png}
+    \begin{figure}
+        \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{diagrams/2.png}
+    \end{figure}
 \end{frame}
 
 \begin{frame}
     \frametitle{Protocole 3/4 - Conflit client-serveur}
-    \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{diagrams/3.png}
+    \begin{figure}
+        \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{diagrams/3.png}
+    \end{figure}
 \end{frame}
 
 \begin{frame}
     \frametitle{Protocole 4/4 - Conflit IDE-client}
-    \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{diagrams/4.png}
+    \begin{figure}
+        \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{diagrams/4.png}
+    \end{figure}
 \end{frame}
 
 \begin{frame}
