--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -3,7 +3,7 @@
 \usetheme{Madrid}
 
 \title[Smart Share]{Smart Share}
-\author[Blazanome]{Romain Benoît, Théo Choné, Ewan Chorynski, Florian Delhon, Théo Gaigé, Amar Hasan Tawfiq, Alix Peigue}
+\author[Blazanome]{Blazanome}
 \institute[INSA Lyon]{INSA Lyon}
 \date{2024}
 
